# rg-rogue

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  IRgRogue.cpp  IRgRogue.hpp  RgRogue.cpp  RgRogue.hpp  main.cpp  version.hpp.in
src/engine/: Bvh.cpp  Bvh.hpp  Camera.cpp  Camera.hpp  ColoredShape.hpp  IShape.hpp  IWorldObject.cpp  IWorldObject.hpp  Player.cpp  Player.hpp  PlayerAI.cpp  PlayerAI.hpp  Shape.cpp  Shape.hpp  Square.cpp  Square.hpp  Vector2D.cpp  Vector2D.hpp  World.cpp  World.hpp  WorldObject.cpp  WorldObject.hpp
src/engine/commands/: CommandJump.cpp  CommandJump.hpp  CommandMove.cpp  CommandMove.hpp  CommandStopJump.cpp  CommandStopJump.hpp  ICommand.cpp  ICommand.hpp  IControllable.cpp  IControllable.hpp
src/engine/shape/: Circle.cpp  Circle.hpp  ColoredShape.cpp  ColoredShape.hpp  IPolygon.cpp  IPolygon.hpp  IShape.cpp  IShape.hpp  Polygon.cpp  Polygon.hpp  Rectangle.cpp  Rectangle.hpp  Segment.cpp  Segment.hpp  Shape.cpp  Shape.hpp  Square.cpp  Square.hpp  Vector2D.cpp  Vector2D.hpp
src/event-loop/: EventDispatcher.cpp  EventDispatcher.hpp  IKeyObserver.cpp  IKeyObserver.hpp  IMainLoop.cpp  IMainLoop.hpp  MainLoop.cpp  MainLoop.hpp
src/logging/: ILogSink.cpp  ILogSink.hpp  ILogger.cpp  ILogger.hpp  LogFormatter.cpp  LogFormatter.hpp  LogLevel.hpp  Logger.cpp  Logger.hpp  LoggerConsole.cpp  LoggerConsole.hpp  Loggers.cpp  Loggers.hpp
src/options/: Options.cpp  Options.hpp
src/ui/: IDrawable.cpp  IDrawable.hpp  IMainWindow.cpp  IMainWindow.hpp  ImGuiAdapter.cpp  ImGuiAdapter.hpp  MainMenu.cpp  MainMenu.hpp  MainWindow.cpp  MainWindow.hpp
src/ui/decorators/: ColoredShape.cpp  ColoredShape.hpp  IShapeDecorator.cpp  IShapeDecorator.hpp
src/ui/scenes/: IScene.cpp  IScene.hpp  Scene.cpp  Scene.hpp  SceneGame.cpp  SceneGame.hpp  SceneIds.hpp  SceneTitle.cpp  SceneTitle.hpp  ScenesPool.cpp  ScenesPool.hpp
tests/: BvhTest.cpp  CMakeLists.txt  CircleTest.cpp  PolygonTest.cpp  RectangleTest.cpp  SegmentTest.cpp  SquareTest.cpp  Vector2DTest.cpp  main.cpp
